assets/css/main.css
/* ... */
table tbody tr {
	border-radius: 10px;
	box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
		0 2px 4px -1px rgba(0, 0, 0, 0.06);
	transition: background-color 0.5s ease-in-out;
}

table tbody tr:hover {
	background-color: #eff3f8;
	transition: background-color 0.5s ease-in-out;
}

table tbody td {
	background: #fff;
	padding: 15px;
	transition: 0.3s ease;
}

table tbody td:first-child {
	border-top-left-radius: 10px;
	border-bottom-left-radius: 10px;
}
table tbody td:last-child {
	border-top-right-radius: 10px;
	border-bottom-right-radius: 10px;
}

table tbody td,
table thead th {
	background-color: #fff;
	padding: 15px 8px;
}

.table-sticky-first,
.table-sticky-last {
	position: sticky;
	background-color: #fff;
}

.table-sticky-first table tbody td:first-child,
.table-sticky-first table thead th:first-child {
	left: 0;
}
.table-sticky-last table tbody td:first-child,
.table-sticky-last table thead th:first-child {
	right: 0;
}

.__jobs-section {
	position: relative;
	/* min-height: 1180px; */
}

.__job-card:hover {
	background-color: #eff3f8;
	transition: background-color 0.5s ease-in-out;
}

.__job-card {
	background-color: #fff;
	transition: background-color 0.5s ease-in-out;
}

.loader {
	background-color: #edf2f7;
	opacity: 0.5;
}

.loader-message:after {
	content: " .";
	animation: dots 1s steps(5, end) infinite;
}

@keyframes dots {
	0%,
	20% {
		color: rgba(0, 0, 0, 0);
		text-shadow: 0.25em 0 0 rgba(0, 0, 0, 0), 0.5em 0 0 rgba(0, 0, 0, 0);
	}

	40% {
		color: white;
		text-shadow: 0.25em 0 0 rgba(0, 0, 0, 0), 0.5em 0 0 rgba(0, 0, 0, 0);
	}

	60% {
		text-shadow: 0.25em 0 0 white, 0.5em 0 0 rgba(0, 0, 0, 0);
	}

	80%,
	100% {
		text-shadow: 0.25em 0 0 white, 0.5em 0 0 white;
	}
}

.truncate {
	display: -webkit-box;
	-webkit-line-clamp: 1;
	-webkit-box-orient: vertical;
	overflow: hidden;
	text-overflow: ellipsis;
	transition: all 0.3s linear;
}

/* MODAL */
.modal-container {
	position: fixed;
	top: 0;
	right: 0;
	width: 100%;
	height: 100%;
	overflow: auto;
	border-left: solid 4px #ccc;
	transition: all 0.3s ease-in-out;
	background-color: white;
	scroll-behavior: smooth;
}

.shield {
	position: fixed;
	top: 0;
	left: 0;
	right: 0;
	bottom: 0;
	background-color: #333;
	opacity: 0.5;
	/* cursor: pointer; */
}

/* @media screen and (min-width: 1200px) {
  .modal-container {
    width: 80%;
  }
} */

.transition-fade {
	transition: all 0.3s ease-in-out;
}

/* modal */
.slide-enter-active,
.slide-leave-active {
	transition: all 0.5s;
}

.slide-enter,
.slide-leave-active {
	transform: translateX(100px);
	opacity: 0;
}

.leftslide-enter-active,
.leftslide-leave-active {
	transition: all 0.5s;
}

.leftslide-enter,
.leftslide-leave-active {
	transform: translateX(-50px);
	opacity: 0;
}

/* confirmation */
.drop-enter-active,
.drop-leave-active {
	transition: all 0.5s;
}

.drop-enter,
.drop-leave-active {
	transform: translateY(-100px);
	opacity: 0;
}

/* toggle */
.drop-down-enter-active,
.drop-down-leave-active {
	transition: all 0.5s;
}

.drop-down-enter,
.drop-down-leave-active {
	transform: translateY(-5px);
	opacity: 0;
}

/* tabs */
.fade-enter-active,
.fade-leave-active {
	transition: all 0.5s;
}

.fade-enter,
.fade-leave-active {
	opacity: 0;
}

/* page */
.page-enter-active,
.page-leave-active {
	transition: all 0.5s;
}

.page-enter,
.page-leave-active {
	transform: translateX(100px);
	opacity: 0;
}

/* remove */
.shield-enter-active,
.shield-leave-active {
	transition: all 0.5s;
}

.shield-enter,
.shield-leave-active {
	display: none;
}

@-webkit-keyframes sk-bouncedelay {
	0%,
	80%,
	100% {
		-webkit-transform: scale(0);
	}

	40% {
		-webkit-transform: scale(1);
	}
}

@keyframes sk-bouncedelay {
	0%,
	80%,
	100% {
		-webkit-transform: scale(0);
		transform: scale(0);
	}

	40% {
		-webkit-transform: scale(1);
		transform: scale(1);
	}
}

/* scrollbar */
@media screen and (min-width: 768px) {
	/* width */
	::-webkit-scrollbar {
		width: 8px;
		height: 8px;
	}

	/* Track */
	::-webkit-scrollbar-track {
		background: #fff;
		border-radius: 3px;
	}

	::-webkit-scrollbar-track:hover {
		background: #eee;
		border-radius: 3px;
	}

	/* Handle */
	::-webkit-scrollbar-thumb {
		background: #ddd;
		border-radius: 3px;
	}

	/* Handle on hover */
	::-webkit-scrollbar-thumb:hover {
		background: #ccc;
	}
}
/* Customized Checkbox */
input[type="checkbox"] {
	position: absolute;
	opacity: 0;
}

input[type="checkbox"] + label {
	position: relative;
	cursor: pointer;
	padding: 0;
}

input[type="checkbox"] + label::before {
	content: "";
	margin: 0 10px auto auto;
	display: inline-block;
	vertical-align: text-top;
	width: 18px;
	height: 18px;
	min-width: 18px;
	min-height: 18px;
	background: #ccc;
}

input[type="checkbox"]:checked + label:before {
	background: #ffc72c;
}

input[type="checkbox"]:checked + label:after {
	content: "";
	position: absolute;
	left: 4px;
	top: 8px;
	background: white;
	width: 2px;
	height: 2px;
	box-shadow: 2px 0 0 white, 4px 0 0 white, 4px -2px 0 white, 4px -4px 0 white,
		4px -6px 0 white, 4px -8px 0 white;
	transform: rotate(45deg);
}

input[type="checkbox"]:disabled + label {
	color: #aaa;
	cursor: not-allowed;
}

input[type="checkbox"]:disabled:checked + label::before {
	background: #ffc72c;
}

input[type="checkbox"]:disabled + label:after {
	background: white;
	box-shadow: 2px 0 0 white, 4px 0 0 white, 4px -2px 0 white, 4px -4px 0 white,
		4px -6px 0 white, 4px -8px 0 white;
}

input::placeholder, textarea::placeholder {
	color: #8896a9;
}

.required-placeholder {
	content: attr('placeholder', 'value', '*');
}

/* Customized Select Dropdown */
.customized-select {
	position: relative;
	padding: 18px 0 12px;
}

.customized-select select {
	appearance: none;
	padding: 4px 20px 4px 8px;
	background: transparent;
	z-index: 1;
}

/* Customized Radio Button */
[type="radio"]:checked,
[type="radio"]:not(:checked) {
    position: absolute;
    left: -9999px;
}
/* ... */

